[gd_scene load_steps=21 format=2]

[ext_resource path="res://Pause/Pause Menu.png" type="Texture" id=1]
[ext_resource path="res://Font/NeverSettleDemo-z8dnX.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HighScore/HighScoreMenu.gd" type="Script" id=3]
[ext_resource path="res://Font/go3v2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/medium.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="DynamicFont" id=6]
size = 72
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 128
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 72
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=11]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 182
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = ExtResource( 4 )

[node name="HighScoreMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 12

[node name="Menu" type="Control" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 275.0
margin_right = -800.0
margin_bottom = -175.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="CanvasLayer/Menu/Panel2"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu/Panel2/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_right = -30.0
grow_horizontal = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingLabel" type="Label" parent="CanvasLayer/Menu/Panel2/Panel2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "LOADING SCORES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1130.0
margin_top = 575.0
margin_right = -200.0
margin_bottom = -375.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Menu/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/read_only = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 1
max_length = 14
placeholder_text = "type here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 1259.0
margin_top = 533.0
margin_right = 1611.0
margin_bottom = 645.0
custom_fonts/font = SubResource( 6 )
text = "YOUR   NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountScoredLabel" type="Label" parent="CanvasLayer"]
margin_left = 1123.0
margin_top = 306.0
margin_right = 1725.0
margin_bottom = 450.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "00000000"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer"]
margin_left = 1012.0
margin_top = 190.0
margin_right = 1632.0
margin_bottom = 334.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "YOU SCORED"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 438.0
margin_top = 52.0
margin_right = 938.0
margin_bottom = 252.0
rect_min_size = Vector2( 500, 200 )
rect_pivot_offset = Vector2( 612, 100 )
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="CanvasLayer"]
margin_left = 1101.0
margin_top = 41.0
margin_right = 1501.0
margin_bottom = 241.0
rect_min_size = Vector2( 400, 200 )
rect_pivot_offset = Vector2( 612, 100 )
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer"]
margin_left = 493.0
margin_top = 63.0
margin_right = 855.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 11 )
text = "Leader"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CanvasLayer"]
margin_left = 1068.0
margin_top = 72.0
margin_right = 1430.0
margin_bottom = 270.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "boards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="CanvasLayer"]
margin_left = 1141.0
margin_top = 754.0
margin_right = 1642.0
margin_bottom = 1042.0
rect_rotation = -6.45057
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/focus = SubResource( 16 )
enabled_focus_mode = 0
text = "submit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1125.0
margin_top = 453.0
margin_right = -229.0
margin_bottom = -619.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankingLabel" type="Label" parent="CanvasLayer"]
margin_left = 1124.0
margin_top = 468.0
margin_right = 1739.0
margin_bottom = 523.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "Ranked Position X overall"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
